package business.locators;

/**
 * Empty interface that indicates any locator value handler
 */
public interface LocatorEntries {}
