package business.locators;

/**
 * The most simple for of the service locator entries
 */
public interface SimpleLocatorEntries extends LocatorEntries{
    String getServiceName();
    String getUIName();
}
