@startuml

title __LOCATORS's Class Diagram__\n

  package business {
    package business.locators {
      class JobsServiceLocator {
          {static} - ourInstance : JobsServiceLocator
          {static} + getInstance()
          - JobsServiceLocator()
          + getValues()
          + getDefault()
          + exists()
          + getMatching()
      }
    }
  }
  

  package business {
    package business.locators {
      enum VALUES {
        JuniorDev
        Manager
        UIName
        serviceName
        classRef
      }
    }
  }
  

  package business {
    package business.locators {
      interface LocatorEntries {
      }
    }
  }
  

  package business {
    package business.locators {
      interface NormalLocatorEntries {
          {abstract} + getUIName()
          {abstract} + getServiceName()
          {abstract} + getClassRef()
      }
    }
  }
  

  package business {
    package business.locators {
      class PaymentTypeServiceLocator {
          {static} - ourInstance : PaymentTypeServiceLocator
          {static} + getInstance()
          - PaymentTypeServiceLocator()
          + getValues()
          + getDefault()
          + exists()
          + getMatching()
      }
    }
  }
  

  package business {
    package business.locators {
      enum VALUES {
        NetEmploymentCost
        GrossEmploymentCost
        NetEmployeeSalary
        name
      }
    }
  }
  

  package business {
    package business.locators {
      class PaymentsServiceLocator {
          {static} - ourInstance : PaymentsServiceLocator
          {static} + getInstance()
          - PaymentsServiceLocator()
          + getValues()
          + getDefault()
          + exists()
          + getMatching()
      }
    }
  }
  

  package business {
    package business.locators {
      enum VALUES {
        StandardPayment
        TestPeriodPayment
        BonusPayment
        UIName
        serviceName
        classRef
      }
    }
  }
  

  package business {
    package business.locators {
      interface ServiceLocator {
          {abstract} + getValues()
          {abstract} + getDefault()
          {abstract} + exists()
          {abstract} + getMatching()
      }
    }
  }
  

  package business {
    package business.locators {
      interface SimpleLocatorEntries {
          {abstract} + getServiceName()
          {abstract} + getUIName()
      }
    }
  }
  

  JobsServiceLocator -up-|> ServiceLocator
  JobsServiceLocator o-- VALUES : defaultValue
  JobsServiceLocator +-down- VALUES
  VALUES -up-|> NormalLocatorEntries
  PaymentTypeServiceLocator -up-|> ServiceLocator
  PaymentTypeServiceLocator o-- VALUES : defaultValue
  PaymentTypeServiceLocator +-down- VALUES
  VALUES -up-|> SimpleLocatorEntries
  PaymentsServiceLocator -up-|> ServiceLocator
  PaymentsServiceLocator o-- VALUES : defaultValue
  PaymentsServiceLocator +-down- VALUES
  VALUES -up-|> NormalLocatorEntries


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
